[gd_scene load_steps=2 format=3 uid="uid://blkdg22qctjsl"]

[ext_resource type="Script" uid="uid://do5oskty6r57m" path="res://src/scenes/UI/GameUI/Score/ScoreUI.gd" id="1_8x2oe"]

[node name="ScoreUI" type="Control"]
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 3
script = ExtResource("1_8x2oe")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
text = "Left Needs"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CounterLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
text = "0/10"
horizontal_alignment = 1
vertical_alignment = 1
